# collectit-beastos

./: .clang-format  CMakeLists.txt
include/beastos/: context_2d.hpp  shader.hpp
include/glad/: glad.h
src/: context_2d.cpp  glad.c  main.cpp  shader.cpp
src/shaders/: main.frag  main.vert
